fix: spacing for discover page components

--- a/src/components/Cards/RecommendedCard/RecommendedCard.css
+++ b/src/components/Cards/RecommendedCard/RecommendedCard.css
@@ -1,14 +1,9 @@
-.content {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
 .recommended-card {
   width: 100%;
   height: auto;
   background-color: white;
   border-radius: 10px;
-  margin: 30px auto;
+  margin: 30px 0;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
 }
 .recommended-card-title {
@@ -73,7 +68,7 @@
 
 @media only screen and (min-width: 768px) {
   .recommended-card {
-    width: calc(50% - 40px);
+    width: calc(50% - 10px);
   }
 }
 
